crates/seasonvar-core/tests/snapshots/page_snapshots__serial@serial-2779.snap
---
source: crates/seasonvar-core/tests/page_snapshots.rs
expression: serial
---
{
  "id": 2779,
  "slug": "-Naruto_pssrhvg-0-season",
  "url": "https://seasonvar.ru/serial-2779--Naruto_pssrhvg-0-season.html",
  "title": {
    "ru": "Наруто",
    "en": "Naruto"
  },
  "season_number": null,
  "poster_url": "https://cdn.bigsv.ru/oblojka/2779.jpg",
  "description": "Перед нами довольно необычный и загадочный мир, который чем то очень сильно напоминает тот ,в котором живм мы с вами. Можно сказать ,что перед нами замершее средневековье, где мы сможем увидеть лордов и купцов, а так же любопытных рыбаков ,передвигающихся на моторных лодках и ниндзя, удобно расположившихся перед телевизором. А вс потому что, в то время всем управляли именно очень умные и смелые синоби, которые смогли познать три ветви великого искусства  это искусство тела, искусство скрытого и искусство иллюзии.  Так что теперь сила государств измерялась не количеством войск, а скрытыми дерев",
  "secure_mark": "8c84f820a8d5453aab6be6ad8bed9488",
  "translations": [
    {
      "id": 0,
      "name": "Стандартный",
      "playlist_path": "/playls2/8c84f820a8d5453aab6be6ad8bed9488/trans/2779/plist.txt?time=1787366579",
      "share_percent": null
    }
  ],
  "seasons": [
    {
      "id": 2779,
      "url": "https://seasonvar.ru/serial-2779--Naruto_pssrhvg-0-season.html",
      "label": "Сериал Наруто/Naruto",
      "current": true,
      "note": "(22.07.2011 220 серия из 220)"
    }
  ],
  "fetched_at": "[ts]"
}
